@@ -1,0 +1,11 @@
+# JIT Compiler
+
+
+## Toggling JIT on/off
+
+It is possible to toggle the JIT compiler on/off during emulation. One
+use case for this is to speed up your Workbench experience, but disable
+the JIT before running games, for better compatibility.
+
+> **Note:** Enabling JIT during emulation will not work unless FS-UAE was
+> started with the JIT compiler initially on.
